# panel

./: CMakeLists.txt  CMakeLists.txt.user.af5c73e  D4D4D4.docx  EmergencyPanel.pro  LineItem.qml  OperatorKeyboard.qml  PasswordManager.h  README.txt  SchedulePage.qml  TestSettingsPage.qml  TimeAjst.h  ValueProvider.h  line.h  linesmodel.h  logger.cpp  logger.h  main.cpp  main.ui  pageTest.qml  resources.qrc  schedulemanager.cpp  schedulemanager.h  screenserver.txt  systemObjects.h  testcontroller.h
